fix: header no wrap on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -57,7 +57,7 @@ nav {
 }
 
 nav .top-menu {
-    height: var(--navbar-height);
+    min-height: var(--navbar-height);
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-between;
@@ -76,6 +76,7 @@ nav h1 {
     opacity: var(--icon-opacity);
     letter-spacing: 0.2em;
     transition: all 0.1s ease-out;
+    white-space: no-wrap;
 }
 
 nav h1:hover {
@@ -430,6 +431,11 @@ footer {
         min-width: 100%;
         max-height: 100vh;
     }
+    nav h1:hover {
+        letter-spacing: 0.1em;
+        opacity: 1;
+        cursor: pointer;
+    }    
     .checkout form {
         display: grid;
         grid-template-columns: 1fr;
